Remove unnecessary quotes

--- a/templates/profile_overrides.erb
+++ b/templates/profile_overrides.erb
@@ -1,8 +1,8 @@
 RDECK_BASE=<%= @rdeck_base %>
-RDECK_CONFIG="<%= @properties_dir %>"
+RDECK_CONFIG=<%= @properties_dir %>
 RDECK_INSTALL=<%= @rdeck_base %>
-JAAS_CONF="$RDECK_CONFIG/jaas-auth.conf"
-LOGIN_MODULE="authentication"
+JAAS_CONF=$RDECK_CONFIG/jaas-auth.conf
+LOGIN_MODULE=authentication
 JAVA_CMD=java
 RDECK_JVM_SETTINGS="<%= @jvm_args %>"
 
