--- a/templates/profile_overrides.erb
+++ b/templates/profile_overrides.erb
@@ -1,5 +1,6 @@
 RDECK_BASE=<%= @rdeck_base %>
 RDECK_CONFIG=<%= @properties_dir %>
+RDECK_CONFIG_FILE=<%= @properties_dir %>/rundeck-config.groovy
 RDECK_INSTALL=<%= @rdeck_base %>
 JAAS_CONF=$RDECK_CONFIG/jaas-auth.conf
 LOGIN_MODULE=authentication
